<resources>
    <string name="app_name">USTHWeather</string>
    <string name="title_activity_weather">USTH Weather</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="monday">MON</string>
    <string name="tuesday">TUE</string>
    <string name="wednesday">WED</string>
    <string name="thursday">THU</string>
    <string name="friday">FRI</string>
    <string name="saturday">SAT</string>
    <string name="sunday">SUN</string>
    <string name="sunny">Sunny and hot</string>
    <string name="sunny_temp">35°C - 40°C</string>
    <string name="thunder">Thunder</string>
    <string name="thunder_temp">23°C - 27°C</string>
    <string name="snowy">Snowy</string>
    <string name="snowy_temp">-10°C - -5°C</string>
    <string name="rainy">Rainy</string>
    <string name="rain_temp">20°C - 28°C</string>
    <string name="cloudy">Cloudy</string>
    <string name="cloud_temp">20°C - 28°C</string>
    <string name="typhoon">Typhoon</string>
    <string name="typhoon_temp">21°C - 25°C</string>
    <string name="Hanoi">Hanoi</string>
    <string name="refresh_icon">refresh_icon</string>
    <string name="three_dots">three_dots\n</string>
    <string name="day">day\n</string>
    <string name="DAy">Day</string>
    <string name="menu" />
</resources>