<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_forecast"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation = "vertical"
    android:gravity="center"
    tools:context=".ForecastFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:padding="20dp"
        android:background="#66ebfa">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginEnd="35dp"
            android:text="MON"
            android:textStyle="bold"
            android:textColor="#522377" />


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/cloudy"
            android:scaleType="fitCenter"
            android:src="@drawable/cloudy" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="75dp"
            android:layout_marginStart="8dp"
            android:text="Cloudy"
            android:textColor="#522377"
            android:textSize="16sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="20°C - 28°C"
            android:textColor="#522377"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_gravity="center"
        android:padding="20dp"
        android:background="#66ebfa">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:gravity="center_vertical"
            android:text="TUE"
            android:textStyle="bold"
            android:textColor="#522377" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:src = "@drawable/snowflake"
            android:contentDescription="@string/snowy" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="80dp"
            android:layout_marginStart="8dp"
            android:text="Snowy"
            android:textColor="#522377"
            android:textSize="16sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_weight="1"
            android:text="-10°C - -5°C"
            android:textColor="#522377" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_gravity="center"
        android:padding="20dp"
        android:background="#66ebfa">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginEnd="35dp"
            android:text="WED"
            android:textStyle="bold"
            android:textColor="#533277" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:src="@drawable/sun"
            android:contentDescription="@string/sunny" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="8dp"
            android:text="Sunny and hot"
            android:textColor="#522377"
            android:textSize="16sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="35°C - 40°C"
            android:textColor="#522377" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_gravity="center"
        android:padding="20dp"
        android:background="#66ebfa">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:gravity="center_vertical"
            android:text="THUS"
            android:textStyle="bold"
            android:textColor="#522377" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/rainy"
            android:scaleType="fitCenter"
            android:src="@drawable/rainy" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="90dp"
            android:layout_marginStart="8dp"
            android:text="Rainy"
            android:textColor="#522377"
            android:textSize="16sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="20°C - 28°C"
            android:textColor="#522377" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_gravity="center"
        android:padding="20dp"
        android:background="#66ebfa">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="45dp"
            android:gravity="center_vertical"
            android:text="FRI"
            android:textStyle="bold"
            android:textColor="#522377" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:src="@drawable/thunder"
            android:contentDescription="@string/thunder" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="70dp"
            android:layout_marginStart="8dp"
            android:text="Thunder"
            android:textColor="#522377"
            android:textSize="16sp" />


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="23°C - 27°C"
            android:textColor="#522377" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#66ebfa"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:gravity="center_vertical"
            android:text="SAT"
            android:textColor="#522377"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/typhoon"
            android:scaleType="fitCenter"
            android:src="@drawable/typhoon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="70dp"
            android:text="Typhoon"
            android:textColor="#522377"
            android:textSize="16sp" />


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="21°C - 25°C"
            android:textColor="#522377" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#66ebfa"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:gravity="center_vertical"
            android:text="SUN"
            android:textColor="#522377"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/sunny"
            android:scaleType="fitCenter"
            android:src="@drawable/sun" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="30dp"
            android:text="Sunny and hot"
            android:textColor="#522377"
            android:textSize="16sp" />


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="35°C - 40°C"
            android:textColor="#522377" />
    </LinearLayout>


</LinearLayout>